[project]
name = "sma-sa-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "langchain>=1.2.14",
    "langchain-openai>=1.1.12",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]
